--- a/graphiql-spring-boot-starter/pom.xml
+++ b/graphiql-spring-boot-starter/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>graphiql-spring-boot-starter</artifactId>
+    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
