--- a/graphql-spqr-spring-boot-starter/pom.xml
+++ b/graphql-spqr-spring-boot-starter/pom.xml
@@ -9,12 +9,14 @@
     </parent>
 
     <artifactId>graphql-spqr-spring-boot-starter</artifactId>
+    <packaging>pom</packaging>
 
     <dependencies>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -25,6 +27,7 @@
         <dependency>
             <groupId>io.leangen.graphql</groupId>
             <artifactId>spqr</artifactId>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
