--- a/graphql-spqr-spring-boot-autoconfigure/src/test/resources/application.properties
+++ b/graphql-spqr-spring-boot-autoconfigure/src/test/resources/application.properties
@@ -5,3 +5,6 @@ graphql.spqr.relay-mutation-wrapper=relayWrapper
 graphql.spqr.relay-mutation-wrapper-description=relayWrapperDescription
 
 graphql.spqr.default-endpoint.mapping=custom-graphql
+
+graphql.messages.foo=bar
+graphql.messages.hello=world
