Upgrade to SPQR 0.9.9-SNAPSHOT Normalize the application proerties Replace GraphiQL with GraphQL Playground Deal with Spring proxies
Closes #13
Fixes #12

--- a/graphql-spqr-spring-boot-autoconfigure/src/test/resources/application.properties
+++ b/graphql-spqr-spring-boot-autoconfigure/src/test/resources/application.properties
@@ -1,10 +1,10 @@
-graphql.spqr.query-base-packages=com.bogus.package
+graphql.spqr.base-packages=com.bogus.package
 
-graphql.spqr.relay-supported=true
-graphql.spqr.relay-mutation-wrapper=relayWrapper
-graphql.spqr.relay-mutation-wrapper-description=relayWrapperDescription
+graphql.spqr.relay.enabled=true
+graphql.spqr.relay.mutation-wrapper=relayWrapper
+graphql.spqr.relay.mutation-wrapper-description=relayWrapperDescription
 
-graphql.spqr.default-endpoint.mapping=custom-graphql
+graphql.spqr.http.endpoint=custom-graphql
 
 graphql.messages.foo=bar
 graphql.messages.hello=world
