--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
-        <spqr.version>0.9.8</spqr.version>
+        <spqr.version>0.9.9-SNAPSHOT</spqr.version>
         <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
     </properties>
 
