Add annotation module

--- a/graphql-spqr-spring-boot-autoconfigure/pom.xml
+++ b/graphql-spqr-spring-boot-autoconfigure/pom.xml
@@ -31,6 +31,11 @@
 
         <dependency>
             <groupId>io.leangen.graphql</groupId>
+            <artifactId>graphql-spqr-spring-boot-annotation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.leangen.graphql</groupId>
             <artifactId>spqr</artifactId>
         </dependency>
 
@@ -49,6 +54,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
