--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
-        <spqr.version>0.9.9-SNAPSHOT</spqr.version>
+        <spqr.version>0.9.9</spqr.version>
         <spring-boot.version>2.1.0.RELEASE</spring-boot.version>
     </properties>
 
@@ -112,6 +112,14 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.projectreactor</groupId>
+                <artifactId>reactor-bom</artifactId>
+                <version>Californium-SR3</version>
+                <type>pom</type>
+                <scope>import</scope>
+                <optional>true</optional>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
