Support subscriptions over SSE Rewrite the WebSocket subscriptions implementation
Closes #97
Closes #98

--- a/graphql-spqr-spring-boot-starter/pom.xml
+++ b/graphql-spqr-spring-boot-starter/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>spqr</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
