- Bean registration fails when it encounters a JDK Proxy - Make async execution the default
Fixes #100
Closes #99

--- a/graphql-spqr-spring-boot-autoconfigure/src/test/resources/application.properties
+++ b/graphql-spqr-spring-boot-autoconfigure/src/test/resources/application.properties
@@ -6,6 +6,7 @@ graphql.spqr.relay.mutation-wrapper-description=relayWrapperDescription
 graphql.spqr.relay.spring-data-compatible=true
 
 graphql.spqr.http.endpoint=custom-graphql
+graphql.spqr.http.mvc.executor=blocking
 
 graphql.messages.foo=bar
 graphql.messages.hello=world
