--- a/graphql-spqr-spring-boot-autoconfigure/pom.xml
+++ b/graphql-spqr-spring-boot-autoconfigure/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.leangen.graphql</groupId>
         <artifactId>graphql-spqr-spring-boot-starter-parent</artifactId>
-        <version>0.0.7-SNAPSHOT</version>
+        <version>0.0.7</version>
     </parent>
 
     <artifactId>graphql-spqr-spring-boot-autoconfigure</artifactId>
