[maven-release-plugin] prepare for next development iteration

--- a/graphql-spqr-spring-boot-starter/pom.xml
+++ b/graphql-spqr-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.leangen.graphql</groupId>
         <artifactId>graphql-spqr-spring-boot-starter-parent</artifactId>
-        <version>0.0.7</version>
+        <version>0.0.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>graphql-spqr-spring-boot-starter</artifactId>
