--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
 
-        <spqr.version>0.12.1</spqr.version>
-        <spring-boot.version>3.0.6</spring-boot.version>
+        <spqr.version>0.12.3</spqr.version>
+        <spring-boot.version>3.1.1</spring-boot.version>
     </properties>
 
     <modules>
@@ -60,6 +60,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.graphql-java</groupId>
+                <artifactId>graphql-java</artifactId>
+                <version>20.3</version>
+            </dependency>
+
+            <dependency>
                 <groupId>io.leangen.graphql</groupId>
                 <artifactId>graphql-spqr-spring-boot-annotations</artifactId>
                 <version>${project.version}</version>
@@ -79,17 +85,16 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.10.1</version>
+                    <version>3.11.0</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <release>${java.version}</release>
                     </configuration>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5.3</version>
+                    <version>3.0.1</version>
                     <configuration>
                         <goals>deploy</goals>
                         <useReleaseProfile>false</useReleaseProfile>
