--- a/graphql-spqr-spring-boot-annotations/pom.xml
+++ b/graphql-spqr-spring-boot-annotations/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.leangen.graphql</groupId>
         <artifactId>graphql-spqr-spring-boot-starter-parent</artifactId>
-        <version>0.0.8</version>
+        <version>0.0.9-SNAPSHOT</version>
     </parent>
 
     <artifactId>graphql-spqr-spring-boot-annotations</artifactId>
